--- a/IndexIt.co.il/App_Themes/Theme1/primary.css
+++ b/IndexIt.co.il/App_Themes/Theme1/primary.css
@@ -66,7 +66,21 @@ td
 	width:30px; float:right;background-color:Transparent;
 	margin: 5px 5px 5px 5px; clear:left;
 }
-
+.InputLongEnglishContent
+{
+	width: 400px; float:right;background-color:Transparent;direction:ltr; text-align:left;
+	margin: 5px 5px 5px 5px;
+}
+.InputLongHebrewContent
+{
+	width: 400px; float:right;background-color:Transparent;direction:rtl; text-align:right;
+	margin: 5px 5px 5px 5px; 
+}
+.InputErrorMessage
+{
+	width:400px; float:right;background-color:Transparent;
+	margin: 5px 5px 5px 5px; clear:left;
+}
 
 
 a:link.demo {background-color:#B2FF99; font-size:medium; color:Blue;  font-style:italic}
